parser.output
Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_CMD

    2 NT_CMD: TM_VAR TM_IDENT
    3       | NT_EXPR TM_ASGNOP NT_EXPR
    4       | NT_CMD TM_SEMICOL NT_CMD
    5       | TM_IF NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    6       | TM_WHILE NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    7       | TM_WI TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
    8       | TM_WC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    9 NT_EXPR: TM_NAT
   10        | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   11        | TM_MINUS NT_EXPR
   12        | NT_EXPR TM_PLUS NT_EXPR
   13        | NT_EXPR TM_MINUS NT_EXPR
   14        | NT_EXPR TM_MUL NT_EXPR
   15        | NT_EXPR TM_DIV NT_EXPR
   16        | NT_EXPR TM_MOD NT_EXPR
   17        | NT_EXPR TM_LT NT_EXPR
   18        | NT_EXPR TM_GT NT_EXPR
   19        | NT_EXPR TM_LE NT_EXPR
   20        | NT_EXPR TM_GE NT_EXPR
   21        | NT_EXPR TM_EQ NT_EXPR
   22        | NT_EXPR TM_NE NT_EXPR
   23        | NT_EXPR TM_AND NT_EXPR
   24        | NT_EXPR TM_OR NT_EXPR
   25        | TM_NOT NT_EXPR
   26        | TM_MUL NT_EXPR
   27        | TM_IDENT
   28        | TM_MALLOC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   29        | TM_RI TM_LEFT_PAREN TM_RIGHT_PAREN
   30        | TM_RC TM_LEFT_PAREN TM_RIGHT_PAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TM_NAT <n> (258) 9
    TM_IDENT <i> (259) 2 27
    TM_LEFT_BRACE <none> (260) 5 6
    TM_RIGHT_BRACE <none> (261) 5 6
    TM_LEFT_PAREN <none> (262) 7 8 10 28 29 30
    TM_RIGHT_PAREN <none> (263) 7 8 10 28 29 30
    TM_SEMICOL <none> (264) 4
    TM_MALLOC <none> (265) 28
    TM_RI <none> (266) 29
    TM_RC <none> (267) 30
    TM_WI <none> (268) 7
    TM_WC <none> (269) 8
    TM_VAR <none> (270) 2
    TM_IF <none> (271) 5
    TM_THEN <none> (272) 5
    TM_ELSE <none> (273) 5
    TM_WHILE <none> (274) 6
    TM_DO <none> (275) 6
    TM_ASGNOP <none> (276) 3
    TM_OR <none> (277) 24
    TM_AND <none> (278) 23
    TM_NOT <none> (279) 25
    TM_LT <none> (280) 17
    TM_LE <none> (281) 19
    TM_GT <none> (282) 18
    TM_GE <none> (283) 20
    TM_EQ <none> (284) 21
    TM_NE <none> (285) 22
    TM_PLUS <none> (286) 12
    TM_MINUS <none> (287) 11 13
    TM_MUL <none> (288) 14 26
    TM_DIV <none> (289) 15
    TM_MOD <none> (290) 16


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    NT_WHOLE <c> (37)
        on left: 1
        on right: 0
    NT_CMD <c> (38)
        on left: 2 3 4 5 6 7 8
        on right: 1 4 5 6
    NT_EXPR <e> (39)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
        on right: 3 5 6 7 8 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 28


State 0

    0 $accept: . NT_WHOLE $end

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_WI          shift, and go to state 7
    TM_WC          shift, and go to state 8
    TM_VAR         shift, and go to state 9
    TM_IF          shift, and go to state 10
    TM_WHILE       shift, and go to state 11
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_WHOLE  go to state 15
    NT_CMD    go to state 16
    NT_EXPR   go to state 17


State 1

    9 NT_EXPR: TM_NAT .

    $default  reduce using rule 9 (NT_EXPR)


State 2

   27 NT_EXPR: TM_IDENT .

    $default  reduce using rule 27 (NT_EXPR)


State 3

   10 NT_EXPR: TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR  go to state 18


State 4

   28 NT_EXPR: TM_MALLOC . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 19


State 5

   29 NT_EXPR: TM_RI . TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 20


State 6

   30 NT_EXPR: TM_RC . TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 21


State 7

    7 NT_CMD: TM_WI . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 22


State 8

    8 NT_CMD: TM_WC . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 23


State 9

    2 NT_CMD: TM_VAR . TM_IDENT

    TM_IDENT  shift, and go to state 24


State 10

    5 NT_CMD: TM_IF . NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR  go to state 25


State 11

    6 NT_CMD: TM_WHILE . NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR  go to state 26


State 12

   25 NT_EXPR: TM_NOT . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR  go to state 27


State 13

   11 NT_EXPR: TM_MINUS . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR  go to state 28


State 14

   26 NT_EXPR: TM_MUL . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR  go to state 29


State 15

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 30


State 16

    1 NT_WHOLE: NT_CMD .
    4 NT_CMD: NT_CMD . TM_SEMICOL NT_CMD

    TM_SEMICOL  shift, and go to state 31

    $default  reduce using rule 1 (NT_WHOLE)


State 17

    3 NT_CMD: NT_EXPR . TM_ASGNOP NT_EXPR
   12 NT_EXPR: NT_EXPR . TM_PLUS NT_EXPR
   13        | NT_EXPR . TM_MINUS NT_EXPR
   14        | NT_EXPR . TM_MUL NT_EXPR
   15        | NT_EXPR . TM_DIV NT_EXPR
   16        | NT_EXPR . TM_MOD NT_EXPR
   17        | NT_EXPR . TM_LT NT_EXPR
   18        | NT_EXPR . TM_GT NT_EXPR
   19        | NT_EXPR . TM_LE NT_EXPR
   20        | NT_EXPR . TM_GE NT_EXPR
   21        | NT_EXPR . TM_EQ NT_EXPR
   22        | NT_EXPR . TM_NE NT_EXPR
   23        | NT_EXPR . TM_AND NT_EXPR
   24        | NT_EXPR . TM_OR NT_EXPR

    TM_ASGNOP  shift, and go to state 32
    TM_OR      shift, and go to state 33
    TM_AND     shift, and go to state 34
    TM_LT      shift, and go to state 35
    TM_LE      shift, and go to state 36
    TM_GT      shift, and go to state 37
    TM_GE      shift, and go to state 38
    TM_EQ      shift, and go to state 39
    TM_NE      shift, and go to state 40
    TM_PLUS    shift, and go to state 41
    TM_MINUS   shift, and go to state 42
    TM_MUL     shift, and go to state 43
    TM_DIV     shift, and go to state 44
    TM_MOD     shift, and go to state 45


State 18

   10 NT_EXPR: TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN
   12        | NT_EXPR . TM_PLUS NT_EXPR
   13        | NT_EXPR . TM_MINUS NT_EXPR
   14        | NT_EXPR . TM_MUL NT_EXPR
   15        | NT_EXPR . TM_DIV NT_EXPR
   16        | NT_EXPR . TM_MOD NT_EXPR
   17        | NT_EXPR . TM_LT NT_EXPR
   18        | NT_EXPR . TM_GT NT_EXPR
   19        | NT_EXPR . TM_LE NT_EXPR
   20        | NT_EXPR . TM_GE NT_EXPR
   21        | NT_EXPR . TM_EQ NT_EXPR
   22        | NT_EXPR . TM_NE NT_EXPR
   23        | NT_EXPR . TM_AND NT_EXPR
   24        | NT_EXPR . TM_OR NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 46
    TM_OR           shift, and go to state 33
    TM_AND          shift, and go to state 34
    TM_LT           shift, and go to state 35
    TM_LE           shift, and go to state 36
    TM_GT           shift, and go to state 37
    TM_GE           shift, and go to state 38
    TM_EQ           shift, and go to state 39
    TM_NE           shift, and go to state 40
    TM_PLUS         shift, and go to state 41
    TM_MINUS        shift, and go to state 42
    TM_MUL          shift, and go to state 43
    TM_DIV          shift, and go to state 44
    TM_MOD          shift, and go to state 45


State 19

   28 NT_EXPR: TM_MALLOC TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR  go to state 47


State 20

   29 NT_EXPR: TM_RI TM_LEFT_PAREN . TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 48


State 21

   30 NT_EXPR: TM_RC TM_LEFT_PAREN . TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 49


State 22

    7 NT_CMD: TM_WI TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR  go to state 50


State 23

    8 NT_CMD: TM_WC TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR  go to state 51


State 24

    2 NT_CMD: TM_VAR TM_IDENT .

    $default  reduce using rule 2 (NT_CMD)


State 25

    5 NT_CMD: TM_IF NT_EXPR . TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   12 NT_EXPR: NT_EXPR . TM_PLUS NT_EXPR
   13        | NT_EXPR . TM_MINUS NT_EXPR
   14        | NT_EXPR . TM_MUL NT_EXPR
   15        | NT_EXPR . TM_DIV NT_EXPR
   16        | NT_EXPR . TM_MOD NT_EXPR
   17        | NT_EXPR . TM_LT NT_EXPR
   18        | NT_EXPR . TM_GT NT_EXPR
   19        | NT_EXPR . TM_LE NT_EXPR
   20        | NT_EXPR . TM_GE NT_EXPR
   21        | NT_EXPR . TM_EQ NT_EXPR
   22        | NT_EXPR . TM_NE NT_EXPR
   23        | NT_EXPR . TM_AND NT_EXPR
   24        | NT_EXPR . TM_OR NT_EXPR

    TM_THEN   shift, and go to state 52
    TM_OR     shift, and go to state 33
    TM_AND    shift, and go to state 34
    TM_LT     shift, and go to state 35
    TM_LE     shift, and go to state 36
    TM_GT     shift, and go to state 37
    TM_GE     shift, and go to state 38
    TM_EQ     shift, and go to state 39
    TM_NE     shift, and go to state 40
    TM_PLUS   shift, and go to state 41
    TM_MINUS  shift, and go to state 42
    TM_MUL    shift, and go to state 43
    TM_DIV    shift, and go to state 44
    TM_MOD    shift, and go to state 45


State 26

    6 NT_CMD: TM_WHILE NT_EXPR . TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   12 NT_EXPR: NT_EXPR . TM_PLUS NT_EXPR
   13        | NT_EXPR . TM_MINUS NT_EXPR
   14        | NT_EXPR . TM_MUL NT_EXPR
   15        | NT_EXPR . TM_DIV NT_EXPR
   16        | NT_EXPR . TM_MOD NT_EXPR
   17        | NT_EXPR . TM_LT NT_EXPR
   18        | NT_EXPR . TM_GT NT_EXPR
   19        | NT_EXPR . TM_LE NT_EXPR
   20        | NT_EXPR . TM_GE NT_EXPR
   21        | NT_EXPR . TM_EQ NT_EXPR
   22        | NT_EXPR . TM_NE NT_EXPR
   23        | NT_EXPR . TM_AND NT_EXPR
   24        | NT_EXPR . TM_OR NT_EXPR

    TM_DO     shift, and go to state 53
    TM_OR     shift, and go to state 33
    TM_AND    shift, and go to state 34
    TM_LT     shift, and go to state 35
    TM_LE     shift, and go to state 36
    TM_GT     shift, and go to state 37
    TM_GE     shift, and go to state 38
    TM_EQ     shift, and go to state 39
    TM_NE     shift, and go to state 40
    TM_PLUS   shift, and go to state 41
    TM_MINUS  shift, and go to state 42
    TM_MUL    shift, and go to state 43
    TM_DIV    shift, and go to state 44
    TM_MOD    shift, and go to state 45


State 27

   12 NT_EXPR: NT_EXPR . TM_PLUS NT_EXPR
   13        | NT_EXPR . TM_MINUS NT_EXPR
   14        | NT_EXPR . TM_MUL NT_EXPR
   15        | NT_EXPR . TM_DIV NT_EXPR
   16        | NT_EXPR . TM_MOD NT_EXPR
   17        | NT_EXPR . TM_LT NT_EXPR
   18        | NT_EXPR . TM_GT NT_EXPR
   19        | NT_EXPR . TM_LE NT_EXPR
   20        | NT_EXPR . TM_GE NT_EXPR
   21        | NT_EXPR . TM_EQ NT_EXPR
   22        | NT_EXPR . TM_NE NT_EXPR
   23        | NT_EXPR . TM_AND NT_EXPR
   24        | NT_EXPR . TM_OR NT_EXPR
   25        | TM_NOT NT_EXPR .

    $default  reduce using rule 25 (NT_EXPR)


State 28

   11 NT_EXPR: TM_MINUS NT_EXPR .
   12        | NT_EXPR . TM_PLUS NT_EXPR
   13        | NT_EXPR . TM_MINUS NT_EXPR
   14        | NT_EXPR . TM_MUL NT_EXPR
   15        | NT_EXPR . TM_DIV NT_EXPR
   16        | NT_EXPR . TM_MOD NT_EXPR
   17        | NT_EXPR . TM_LT NT_EXPR
   18        | NT_EXPR . TM_GT NT_EXPR
   19        | NT_EXPR . TM_LE NT_EXPR
   20        | NT_EXPR . TM_GE NT_EXPR
   21        | NT_EXPR . TM_EQ NT_EXPR
   22        | NT_EXPR . TM_NE NT_EXPR
   23        | NT_EXPR . TM_AND NT_EXPR
   24        | NT_EXPR . TM_OR NT_EXPR

    TM_MUL  shift, and go to state 43
    TM_DIV  shift, and go to state 44
    TM_MOD  shift, and go to state 45

    $default  reduce using rule 11 (NT_EXPR)


State 29

   12 NT_EXPR: NT_EXPR . TM_PLUS NT_EXPR
   13        | NT_EXPR . TM_MINUS NT_EXPR
   14        | NT_EXPR . TM_MUL NT_EXPR
   15        | NT_EXPR . TM_DIV NT_EXPR
   16        | NT_EXPR . TM_MOD NT_EXPR
   17        | NT_EXPR . TM_LT NT_EXPR
   18        | NT_EXPR . TM_GT NT_EXPR
   19        | NT_EXPR . TM_LE NT_EXPR
   20        | NT_EXPR . TM_GE NT_EXPR
   21        | NT_EXPR . TM_EQ NT_EXPR
   22        | NT_EXPR . TM_NE NT_EXPR
   23        | NT_EXPR . TM_AND NT_EXPR
   24        | NT_EXPR . TM_OR NT_EXPR
   26        | TM_MUL NT_EXPR .

    $default  reduce using rule 26 (NT_EXPR)


State 30

    0 $accept: NT_WHOLE $end .

    $default  accept


State 31

    4 NT_CMD: NT_CMD TM_SEMICOL . NT_CMD

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_WI          shift, and go to state 7
    TM_WC          shift, and go to state 8
    TM_VAR         shift, and go to state 9
    TM_IF          shift, and go to state 10
    TM_WHILE       shift, and go to state 11
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_CMD   go to state 54
    NT_EXPR  go to state 17


State 32

    3 NT_CMD: NT_EXPR TM_ASGNOP . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14

    NT_EXPR  go to state 55


State 33

   24 NT_EXPR: NT_EXPR TM_OR . NT_EXPR
